# MCST_Internship

./: .clang-format  .gitignore
Task_1/: CMakeLists.txt  converted.DOT  converter.cpp  mealy_1_1.json
Task_2/: CMakeLists.txt  pseudorandom_machine_generator.cpp  tests.sh
Task_3/: CMakeLists.txt  sequence_formation.cpp
Task_3/include/: utility_functions.hpp
Task_3/src/: sequence_formation.cpp  utility_functions.cpp
Task_4/: CMakeLists.txt  tests_coverages.sh
Task_4/include/: functions.hpp
Task_4/src/: coverage_checking.cpp  functions.cpp
Task_5/: CMakeLists.txt  cache_emulations.DOT
Task_5/include/: functions.hpp
Task_5/src/: associative_cache_memory.cpp  functions.cpp
Task_6/: CMakeLists.txt  operations.txt
Task_6/include/: functions.hpp
Task_6/src/: cache_modelling.cpp  functions.cpp
Task_7/: CMakeLists.txt  tests_cache_gen.sh  tmp_tst.txt
Task_7/include/: functions.hpp
Task_7/src/: cache_generator.cpp  functions.cpp
